text overflow fixing

--- a/JusiLms/Pages/Account.razor.css
+++ b/JusiLms/Pages/Account.razor.css
@@ -92,7 +92,7 @@
 @media(max-width: 720px) {
 
     .hw {
-        height: 62px;
+        height: 82px;
     }
 
     .header-container {
