--- a/JusiLms/Pages/AccountEdit.razor.css
+++ b/JusiLms/Pages/AccountEdit.razor.css
@@ -89,10 +89,12 @@
     }
 }
 
+
+
 @media(max-width: 720px) {
 
     .hw {
-        height: 62px;
+        height: 82px;
     }
 
     .header-container {
